only:alphax-4k-gdi

--- a/firmware/config/boards/hellen/alphax-4K-GDI/board_commands.ini
+++ b/firmware/config/boards/hellen/alphax-4K-GDI/board_commands.ini
@@ -1,3 +1,8 @@
 cmd_set_engine_type_HYUNDAI_PB				        = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SET_ENGINE_TYPE_16_hex@@@@engine_type_e_HYUNDAI_PB_16_hex@@"
 
+; 2.5 NA
 cmd_set_engine_type_GM_LCV				        = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SET_ENGINE_TYPE_16_hex@@@@engine_type_e_GM_LCV_16_hex@@"
+; 2.0T
+cmd_set_engine_type_GM_LTG				        = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SET_ENGINE_TYPE_16_hex@@@@engine_type_e_GM_LTG_16_hex@@"
+; 2.0T
+cmd_set_engine_type_GM_LNF				        = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SET_ENGINE_TYPE_16_hex@@@@engine_type_e_GM_LNF_16_hex@@"
