--- a/firmware/config/boards/hellen/alphax-4K-GDI/board_popular_vehicles.ini
+++ b/firmware/config/boards/hellen/alphax-4K-GDI/board_popular_vehicles.ini
@@ -1,3 +1,5 @@
 commandButton = "Hyundai PB",		        cmd_set_engine_type_HYUNDAI_PB
 
-commandButton = "GM LCV",		        cmd_set_engine_type_GM_LCV
+commandButton = "GM LCV 2.5NA",		        cmd_set_engine_type_GM_LCV
+commandButton = "GM LNF 2.0T",		        cmd_set_engine_type_GM_LNF
+commandButton = "GM LTG 2.0T",		        cmd_set_engine_type_GM_LTG
