SD card: show formating indicator while formating
Also show return values to user.

TODO: store all FatFS returned errors to sd_error
(cherry picked from commit 0c33d3eb962f66c05b10d71c5234b1b39dfbfa29)

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4482,6 +4482,11 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	indicatorPanel = sdCardStateIndicators, 2, { isSdCardEnabled }
 		indicator = { sd_logging_internal }, "No SD logging", "SD logging", white, black, green, black
 		indicator = { sd_msd }, "No SD USB", "SD USB",  white,  black,  green,  black
+		indicator =	{ sd_formating }, "No SD formating", "SD formating", white, black, green, black
+		indicator = { sd_error }, "No SD card error", "SD error", white, black, red, black
+
+	readoutPanel = sdCardErrorPanel
+		readout = sd_error, "FRESULT", "", 0, 20, 0, 0, 1, 1, 0, 0
 
 	indicatorPanel = sdCardErrorReportIndicators, 1, { isSdCardEnabled }
 		indicator = { hasFaultReportFile }, "No error reports", "Error report on SD", white, black, red, black
@@ -4497,6 +4502,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = sdCardActivityIndicators
 		panel = sdCardLogging
 		panel = sdCardStateIndicators
+		panel = sdCardErrorPanel
 		panel = sdCardCommands
 		panel = sdReportCommands
 
