silver rev B is not compatible with rev A :( only:mess

--- a/firmware/config/boards/hellen/alphax-silver-revA/connectors/alphax-silver.yaml
+++ b/firmware/config/boards/hellen/alphax-silver-revA/connectors/alphax-silver.yaml
@@ -193,11 +193,11 @@ pins:
     color: black
 
   - pin: 28A
-    #    id: TLE9104_1_OUT_3
-    function: Analog Input TBD
-    #    class: outputs
-    #    type: ls
-    #    ts_name: ___ Fan Relay
+    id: TLE9104_1_OUT_3
+    function: Fan Relay
+    class: outputs
+    type: ls
+    ts_name: ___ Fan Relay
     color: blue
 
   - pin: 29A
