TunerStudio UI: minor renaming and rearranging around ETB and EWG

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -596,7 +596,7 @@ enable2ndByteCanID = false
 		yBins		= etbBiasValues
 		gauge		= TPSGauge
 
-	curve = dcWastegateBiasCurve, "DC Wastegate Bias Curve"
+	curve = ewgBiasCurve, "Electronic Wastegate Actuator Bias Curve"
 		columnLabel = "DC Position", "duty bias"
 		xAxis		=  0, 50, 11
 		yAxis		=  -40, 40, 9
@@ -2193,8 +2193,6 @@ menuDialog = main
 		groupChildMenu = boostClosedBlend2Cfg,		"Closed loop 2 bias",	{ isBoostControlEnabled && boostType == 1 }
 		groupChildMenu = boostClosedBlend2Table,	"Closed loop 2 adder",	{ isBoostControlEnabled && boostType == 1 && boostClosedLoopBlends2_blendParameter != 0 }
 
-		subMenu = boostEtbPid,			"ETB-style Wastegate Actuator", { etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@ }
-
 		subMenu = std_separator
 		subMenu = gppwm1, @@GPPWM_1_NAME@@, { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		subMenu = gppwm2, @@GPPWM_2_NAME@@, { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
@@ -2202,11 +2200,14 @@ menuDialog = main
 		subMenu = gppwm4, @@GPPWM_4_NAME@@, { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 
 		subMenu = std_separator				@@if_ts_show_etb
-		subMenu = etbDialog,				"Electronic throttle body", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb
+		subMenu = etbDialog,				"Electronic Throttle Body actuator", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb
 		subMenu = etbTpsBiasCurve,			"ETB bias curve (feed forward)", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb_bias_curve
-		subMenu = dcWastegateBiasCurve,		"DC wastegate bias curve (feed forward)", { 1 }, { etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@ } @@if_ts_show_etb_bias_curve
 		subMenu = pedalToTpsTbl,			@@pedalToTpsTbl_NAME@@ @@if_ts_show_etb
 		subMenu = throttle2TrimTbl,			"ETB #2 Trim", { tps2_1AdcChannel != @@ADC_CHANNEL_NONE@@ } @@if_ts_show_tps2
+
+		subMenu = std_separator				@@if_ts_show_etb
+		subMenu = ewgPid,					"Electronic Wastegate actuator", { etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@ } @@if_ts_show_etb
+		subMenu = ewgBiasCurve,				"EWG bias curve (feed forward)", { 1 }, { etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@ } @@if_ts_show_etb_bias_curve
 
 		subMenu = std_separator@@if_ts_show_vvt_output
 		subMenu = vvtPidDialog,				"VVT outputs and PID", { vvtMode1 != @@vvt_mode_e_VVT_INACTIVE@@ }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }@@if_ts_show_vvt_output
@@ -4950,8 +4951,8 @@ dialog = tcuControls, "Transmission Settings"
 			dialog = boostTargetDialog, "", card
 					panel = boostClosedTbl
 
-	dialog = boostEtbPid, ""
-		field = "This PID is controlling how DC motor reaches desired position"
+	dialog = ewgPid, ""
+		field = "This PID is controlling how Electronic Wastegate Actuator DC motor reaches desired position"
 		field = ""
 		field = "!This section is for advanced users only!"
 		field = "H-Bridge #1 function",					etbFunctions1
