TunerStudio UI: move H-bridge HW settings and function to separage dialogs

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2200,6 +2200,10 @@ menuDialog = main
 		subMenu = gppwm4, @@GPPWM_4_NAME@@, { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 
 		subMenu = std_separator				@@if_ts_show_etb
+		subMenu = dcMotorActuatorHw			"DC motor actuator(s) hardware", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb
+		subMenu = dcMotorActuatorFunction,	"DC motor actuator(s) function", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_hbridge_function
+
+		subMenu = std_separator				@@if_ts_show_etb
 		subMenu = etbDialog,				"Electronic Throttle Body actuator", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb
 		subMenu = etbTpsBiasCurve,			"ETB bias curve (feed forward)", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb_bias_curve
 		subMenu = pedalToTpsTbl,			@@pedalToTpsTbl_NAME@@ @@if_ts_show_etb
@@ -3876,22 +3880,33 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Idle Solenoid output(s) Mode",		idle_solenoidPinMode, !useStepperIdle
 		field = "Idle Solenoid Frequency",				idle_solenoidFrequency, !useStepperIdle
 
-	dialog = etbHbridgeHardwareNo1, "H-Bridge Hardware No1"
+	dialog = dcHbridgeHardwareNo1, "H-Bridge Hardware No1"
 		field = "No1 Direction #1",						etbIo1_directionPin1
 		field = "No1 Direction #2",						etbIo1_directionPin2
 		field = "No1 Control",							etbIo1_controlPin
 		field = "No1 Disable",							etbIo1_disablePin
 
-	dialog = etbHbridgeHardwareNo2, "H-Bridge Hardware No2"
+	dialog = dcHbridgeHardwareNo2, "H-Bridge Hardware No2"
 		field = "No2 Direction #1",						etbIo2_directionPin1
 		field = "No2 Direction #2",						etbIo2_directionPin2
 		field = "No2 Control",							etbIo2_controlPin
 		field = "No2 Disable",							etbIo2_disablePin
 
-	dialog = etbHbridgeHardware, "ETB H-Bridge Hardware"
+	dialog = dcHbridgeHardware, "H-Bridge Hardware"
 		field = "Two-wire mode",						etb_use_two_wires
-		panel = etbHbridgeHardwareNo1
-		panel = etbHbridgeHardwareNo2
+		panel = dcHbridgeHardwareNo1
+		panel = dcHbridgeHardwareNo2
+
+	dialog = dcMotorActuatorHw, "DC motor actuator(s) hardware"
+		; we need the term about stepper idle in here, because there's a bug in TS that you can't have different visibility
+		; criteria for the same panel when used in multiple places
+		; todo: report bug to TS?
+		; another todo: split panel into two panels so that we can enable/disable h-bridge #1 separately from h-bridge #2
+		panel = dcHbridgeHardware, { etbFunctions1 != @@dc_function_e_DC_None@@ || etbFunctions2 != @@dc_function_e_DC_None@@ || (useStepperIdle && useHbridgesToDriveIdleStepper) } @@if_ts_show_etb_pins
+
+	dialog = dcMotorActuatorFunction, "DC motor actuator(s) function"
+		field = "H-Bridge #1 function",					etbFunctions1
+		field = "H-Bridge #2 function",					etbFunctions2
 
 	dialog = stepperHbridgeHardwareNo1, "H-Bridge Hardware No1"
 		field = "No1 Direction #1",						stepperDcIo1_directionPin1
@@ -4955,8 +4970,6 @@ dialog = tcuControls, "Transmission Settings"
 		field = "This PID is controlling how Electronic Wastegate Actuator DC motor reaches desired position"
 		field = ""
 		field = "!This section is for advanced users only!"
-		field = "H-Bridge #1 function",					etbFunctions1
-		field = "H-Bridge #2 function",					etbFunctions2
 		field = "P gain",							etbWastegatePid_pFactor,  { isBoostControlEnabled }
 		field = "I gain",							etbWastegatePid_iFactor,  { isBoostControlEnabled }
 		field = "D gain",							etbWastegatePid_dFactor,  { isBoostControlEnabled }
@@ -5044,33 +5057,34 @@ dialog = tcuControls, "Transmission Settings"
 		field = "iTermMin",								etb_iTermMin
 		field = "iTermMax",								etb_iTermMax
 
-	dialog = etbIdleDialog, "ETB Idle"
+	dialog = etbDialogIdle, "ETB Idle"
 		field = "ETB idle maximum angle",				etbIdleThrottleRange
 
     indicatorPanel = etbIndicatorPanel, 1
 	      indicator = {etb1jamDetected}, "jamDetected No", "jamDetected Yes"
 
-
-	dialog = etbDialogLeft
+	dialog = etbDialogBase, "Base ETB settings"
 		field = "https://rusefi.com/s/etb"
-		field = "Disable ETB if engine is stopped",		disableEtbWhenEngineStopped
 		field = "Disable ETB Motor",					pauseEtbControl
-		field = "H-Bridge #1 function",					etbFunctions1@@if_ts_show_hbridge_function
-		field = "H-Bridge #2 function",					etbFunctions2@@if_ts_show_hbridge_function
+		field = "Disable ETB if engine is stopped",		disableEtbWhenEngineStopped
+		field = ""
 		field = "PWM Frequency",						etbFreq@@if_ts_show_etb_frequency
+		field = ""
 		field = "Minimum ETB position",					etbMinimumPosition
 		field = "Maximum ETB position",					etbMaximumPosition
-		field = ""
-		field = "Jam detection error max",				etbJamDetectThreshold, { etbJamDetectThreshold == 0 || etbJamTimeout != 0 }@@if_ts_show_jam_detection
-		field = "Jam detection timeout period",			etbJamTimeout, { etbJamDetectThreshold != 0 }@@if_ts_show_jam_detection
-		field = "Disables jam detection for testing until the next power cycle"@@if_ts_show_jam_detection@@if_ts_show_jam_detection
-		commandButton = "Temporarily disable jam detection", cmd_etb_disable_jam_detect@@if_ts_show_jam_detection
+
+	dialog = etbDialogJam, "ETB Jam detection settings"
+		field = "Jam detection error max",				etbJamDetectThreshold, { etbJamDetectThreshold == 0 || etbJamTimeout != 0 }
+		field = "Jam detection timeout period",			etbJamTimeout, { etbJamDetectThreshold != 0 }
+		field = "Disables jam detection for testing until the next power cycle"
+		commandButton = "Temporarily disable jam detection", cmd_etb_disable_jam_detect
+
+	dialog = etbDialogLeft
+		panel = etbDialogBase
+		panel = etbDialogIdle,{ etbFunctions1 == @@dc_function_e_DC_Throttle1@@ || etbFunctions1 == @@dc_function_e_DC_Throttle2@@ || etbFunctions2 == @@dc_function_e_DC_Throttle1@@ || etbFunctions2 == @@dc_function_e_DC_Throttle2@@ }
+		panel = etbDialogJam@@if_ts_show_jam_detection
 		panel = etbIndicatorPanel
-		; we need the term about stepper idle in here, because there's a bug in TS that you can't have different visibility
-		; criteria for the same panel when used in multiple places
-		; todo: report bug to TS?
-		; another todo: split panel into two panels so that we can enable/disable h-bridge #1 separately from h-bridge #2
-		panel = etbHbridgeHardware, { etbFunctions1 != @@dc_function_e_DC_None@@ || etbFunctions2 != @@dc_function_e_DC_None@@ || (useStepperIdle && useHbridgesToDriveIdleStepper) } @@if_ts_show_etb_pins
+;		commandButton = "Reset ETB", cmd_etb_reset
 
 	dialog = etbAutotune, "PID Autotune"
 		field = "First step: calibrate TPS and hit 'Burn'"
@@ -5084,8 +5098,6 @@ dialog = tcuControls, "Transmission Settings"
 		commandButton = "Stop ETB PID Autotune",  cmd_etb_autotune_stop,  {hasIgnitionVoltage && (etbFunctions1 == @@dc_function_e_DC_Throttle1@@ || etbFunctions1 == @@dc_function_e_DC_Throttle2@@ || etbFunctions2 == @@dc_function_e_DC_Throttle1@@ || etbFunctions2 == @@dc_function_e_DC_Throttle2@@) && calibrationMode >= @@TsCalMode_EtbKp@@ && calibrationMode <= @@TsCalMode_EtbKd@@}
 
 	dialog = etbDialogRight
-		panel = etbIdleDialog,{ etbFunctions1 == @@dc_function_e_DC_Throttle1@@ || etbFunctions1 == @@dc_function_e_DC_Throttle2@@ || etbFunctions2 == @@dc_function_e_DC_Throttle1@@ || etbFunctions2 == @@dc_function_e_DC_Throttle2@@ }
-;		commandButton = "Reset ETB", cmd_etb_reset
 		panel = etbPidDialog, { etbFunctions1 == @@dc_function_e_DC_Throttle1@@ || etbFunctions1 == @@dc_function_e_DC_Throttle2@@ || etbFunctions2 == @@dc_function_e_DC_Throttle1@@ || etbFunctions2 == @@dc_function_e_DC_Throttle2@@ }
 		panel = etbAutotune,  { etbFunctions1 == @@dc_function_e_DC_Throttle1@@ || etbFunctions1 == @@dc_function_e_DC_Throttle2@@ || etbFunctions2 == @@dc_function_e_DC_Throttle1@@ || etbFunctions2 == @@dc_function_e_DC_Throttle2@@ }
 
