TS UI: fix typo

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3894,15 +3894,15 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = dcHbridgeHardware, "H-Bridge Hardware"
 		field = "Two-wire mode",						etb_use_two_wires
-		panel = dcHbridgeHardwareNo1e@@if_ts_show_etb_pins
-		panel = dcHbridgeHardwareNo2e@@if_ts_show_etb_pins
+		panel = dcHbridgeHardwareNo1@@if_ts_show_etb_pins
+		panel = dcHbridgeHardwareNo2@@if_ts_show_etb_pins
 
 	dialog = dcMotorActuatorHw, "DC motor actuator(s) hardware"
 		; we need the term about stepper idle in here, because there's a bug in TS that you can't have different visibility
 		; criteria for the same panel when used in multiple places
 		; todo: report bug to TS?
 		; another todo: split panel into two panels so that we can enable/disable h-bridge #1 separately from h-bridge #2
-		panel = dcHbridgeHardwar
+		panel = dcHbridgeHardware
 
 	dialog = dcMotorActuatorFunction, "DC motor actuator(s) function"
 		field = "H-Bridge #1 function",					etbFunctions1
