TS UI: ETB/EWG bias curve position axis range 0..100

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -588,9 +588,9 @@ enable2ndByteCanID = false
 		yBins		= cltRevLimitRpm
 		gauge		= CLTGauge
 
-	curve = etbTpsBiasCurve, "Electronic TB Bias Curve"
+	curve = etbTpsBiasCurve, "Electronic Throttle Body Bias Curve"
 		columnLabel = "TPS", "duty bias"
-		xAxis		=  0, 50, 11
+		xAxis		=  0, 100, 11
 		yAxis		=  -40, 40, 9
 		xBins		= etbBiasBins, TPSValue
 		yBins		= etbBiasValues
@@ -598,7 +598,7 @@ enable2ndByteCanID = false
 
 	curve = ewgBiasCurve, "Electronic Wastegate Actuator Bias Curve"
 		columnLabel = "DC Position", "duty bias"
-		xAxis		=  0, 50, 11
+		xAxis		=  0, 100, 11
 		yAxis		=  -40, 40, 9
 		xBins		= dcWastegateBiasBins
 		yBins		= dcWastegateBiasValues
