--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -5056,7 +5056,7 @@ dialog = tcuControls, "Transmission Settings"
 		field = "pid max",								etb_maxValue
 		field = "iTermMin",								etb_iTermMin
 		field = "iTermMax",								etb_iTermMax
-		filed = "Accurate dt",							etbUsePreciseTiming
+		field = "Accurate dt",							etbUsePreciseTiming
 
 	dialog = etbDialogIdle, "ETB Idle"
 		field = "ETB idle maximum angle",				etbIdleThrottleRange
