only:ts_show_dc_hardware

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2199,8 +2199,8 @@ menuDialog = main
 		subMenu = gppwm3, @@GPPWM_3_NAME@@, { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		subMenu = gppwm4, @@GPPWM_4_NAME@@, { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 
-		subMenu = std_separator				@@if_ts_show_etb
-		subMenu = dcMotorActuatorHw			"DC motor actuator(s) hardware", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb
+		subMenu = std_separator				@@if_ts_show_dc_hardware
+		subMenu = dcMotorActuatorHw			"DC motor actuator(s) hardware", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_dc_hardware
 		subMenu = dcMotorActuatorFunction,	"DC motor actuator(s) function", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_hbridge_function
 
 		subMenu = std_separator				@@if_ts_show_etb
