quick shift scalars to become tables [update definition & TS] see #7680

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1520,6 +1520,24 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		yBins		= rpmIdleCorrBins, RPMValue
 		zBins		= cltIdleCorrTable
 
+	table = torqueReductionIgnitionCutTlb, torqueReductionIgnitionCutMap, "Torque reduction cut table"
+		xyLabels    = {bitStringValue(pwmAxisLabels, torqueReductionCutXaxis)}, "Current Gear"
+		xBins		= torqueReductionCutXBins, gppwmXAxis1
+		yBins		= torqueReductionCutGearBins, tcuCurrentGear
+		zBins		= torqueReductionIgnitionCutTable
+
+	table = torqueReductionIgnitionRetardTlb, torqueReductionIgnitionRetardMap, "Torque reduction ignition retard table"
+		xyLabels    = {bitStringValue(pwmAxisLabels, torqueReductionIgnitionRetardXaxis)}, "Current Gear"
+		xBins		= torqueReductionIgnitionRetardXBins, gppwmXAxis1
+		yBins		= torqueReductionIgnitionRetardGearBins, tcuCurrentGear
+		zBins		= torqueReductionIgnitionRetardTable
+
+	table = torqueReductionTimeTlb, torqueReductionTimeMap, "Torque reduction time table"
+		xyLabels    = {bitStringValue(pwmAxisLabels, torqueReductionTimeXaxis)}, "Current Gear"
+		xBins		= torqueReductionTimeXBins, gppwmXAxis1
+		yBins		= torqueReductionTimeGearBins, tcuCurrentGear
+		zBins		= torqueReductionTimeTable
+
 [GaugeConfigurations]
 @@LIVE_DATA_GAUGES_FROM_FILE@@
 @@BOARD_GAUGES_FROM_FILE@@
@@ -2169,6 +2187,9 @@ menuDialog = main
 	menu = "&Advanced"
 		subMenu = smLaunchControl,				@@smLaunchControl_NAME@@
 		subMenu = ShiftTorqueReductionDialog,	"Shift Torque Reduction (Flat Shift)"
+		subMenu = torqueReductionTimeDialog,			"Shift Torque Reduction Time table"
+		subMenu = torqueReductionIgnitionRetardDialog,	"Torque Reduction Ignition Retard Table"
+		subMenu = torqueReductionIgnitionCutDialog,		"Torque Reduction Ignition Cut Table"
 		subMenu = NitrousControlDialog,			"Nitrous Control"
 		subMenu = ignitionCylExtra,				"Cylinder offsets", 0@@if_ts_show_odd_fire
 
@@ -5250,12 +5271,8 @@ dialog = tcuControls, "Transmission Settings"
 		panel = ClutchUpDialog, 				{torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_CLUTCH_UP_SWITCH@@}
 
 	dialog = TorqueReductionSettings, "Settings"
-	    field = "Limit Torque Reduction Time",		limitTorqueReductionTime
-		field = "Torque Reduction Time",			torqueReductionTime,            {limitTorqueReductionTime != 0}
 		field = "Torque Reduction Arming RPM",		torqueReductionArmingRpm
 		field = "Torque Reduction Arming APP",		torqueReductionArmingApp
-		field = "Torque Reduction Ignition Retard",	torqueReductionIgnitionRetard
-		field = "Torque Reduction Ignition Cut",	torqueReductionIgnitionCut
 
 	dialog = ShiftTorqueReductionSettingsDialog, "", yAxis
 		field = "Enable Shift Torque Reduction",		torqueReductionEnabled
@@ -5265,6 +5282,18 @@ dialog = tcuControls, "Transmission Settings"
 	dialog = ShiftTorqueReductionDialog, "", border
 		panel = ShiftTorqueReductionSettingsDialog, West
 		panel = shift_torque_reduction_stateDialog, East
+
+	dialog = torqueReductionTimeDialog, "", yAxis
+		field = "X axis",						torqueReductionTimeXaxis
+		panel =	torqueReductionTimeTlb, { torqueReductionTimeXaxis != @@gppwm_channel_e_GPPWM_Zero@@}
+
+	dialog = torqueReductionIgnitionRetardDialog, "", yAxis
+		field = "X axis",						torqueReductionIgnitionRetardXaxis
+		panel = torqueReductionIgnitionRetardTlb, { torqueReductionIgnitionRetardXaxis != @@gppwm_channel_e_GPPWM_Zero@@}
+
+	dialog = torqueReductionIgnitionCutDialog, "", yAxis
+		field = "X axis",						torqueReductionCutXaxis
+		panel = torqueReductionIgnitionCutTlb, { torqueReductionCutXaxis != @@gppwm_channel_e_GPPWM_Zero@@}
 
 	dialog = NitrousControlButtonDialog, "Digital Switch Input"
 		field = "Nitrous Control Button",	nitrousControlTriggerPin
