refactoring: leverage EngineModule more often [tachometer] see #7572

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -257,6 +257,7 @@ endif
 
 include $(PROJECT_DIR)/hw_layer/mass_storage/mass_storage.mk
 include $(PROJECT_DIR)/common.mk
+include $(PROJECT_DIR)/controllers/modules/modules.mk
 
 ifeq ($(USE_OPENBLT),yes)
   # Reserve start of flash for OpenBLT
@@ -307,6 +308,7 @@ CPPSRC = \
   $(HW_LAYER_DRIVERS_CORE_CPP) \
   $(HW_LAYER_DRIVERS_CPP) \
   $(CONSOLE_SRC_CPP) \
+  $(MODULES_CPPSRC) \
   $(RUSEFI_LIB_CPP) \
   rusefi.cpp \
   main.cpp
@@ -343,6 +345,7 @@ INCDIR += \
   $(PCH_DIR) \
   $(BOARDINC) \
   $(ALLINC) \
+  $(MODULES_INC) \
   $(TESTINC) \
   $(CHIBIOS)/os/various \
   $(RUSEFI_LIB_INC) \
@@ -434,6 +437,7 @@ include docs_enums.mk
 
 # Enable precompiled header
 include rusefi_pch.mk
+include $(PROJECT_DIR)/controllers/modules/modules_header_gen.mk
 
 include bundle.mk
 
