CI coverage to assert that unit test build is incremental #7748 only:trying

--- a/.github/workflows/build-unit-tests.yaml
+++ b/.github/workflows/build-unit-tests.yaml
@@ -53,7 +53,15 @@ jobs:
 
     - name: Build Tests
       working-directory: ./unit_tests/
-      run: make -j4 COVERAGE=yes
+      run: |
+        TIMEFORMAT=%R
+        time make -j4 COVERAGE=yes
+
+    - name: Build Tests again to assert incremental
+      working-directory: ./unit_tests/
+      run: |
+        TIMEFORMAT=%R
+        time make -j4 COVERAGE=yes
 
     - name: Run Tests
       working-directory: ./unit_tests/
