TS UI: add etb1DutyCycle as Y OutputChannel on ETB bias curve
This helps aiming when filling Bias table.

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -593,7 +593,7 @@ enable2ndByteCanID = false
 		xAxis		=  0, 100, 11
 		yAxis		=  -40, 40, 9
 		xBins		= etbBiasBins, TPSValue
-		yBins		= etbBiasValues
+		yBins		= etbBiasValues, etb1DutyCycle
 		gauge		= TPSGauge
 
 	curve = ewgBiasCurve, "Electronic Wastegate Actuator Bias Curve"
