--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -593,7 +593,7 @@ enable2ndByteCanID = false
 		xAxis		=  0, 50, 11
 		yAxis		=  -40, 40, 9
 		xBins		= etbBiasBins, TPSValue
-		yBins		= etbBiasValues
+		yBins		= etbBiasValues, etb1DutyCycle
 		gauge		= TPSGauge
 
 	curve = crankingTpsCurve, "Cranking TPS Multiplier"
