--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2751,19 +2751,21 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "VVT gap #4 from",	triggerVVTGapOverrideFrom4      { overrideVvtTriggerGaps == 1 && gapVvtTrackingLengthOverride >= 4 }
 		field = "VVT gap #4 to",	triggerVVTGapOverrideTo4          { overrideVvtTriggerGaps == 1 && gapVvtTrackingLengthOverride >= 4 }
 
+  dialog = trigger_console, "Console Logging"
+		field = "Print verbose VVT sync details to console",verboseVVTDecoding
+		field = "Print verbose trigger sync to console",	verboseTriggerSynchDetails
+		field = "Display logic signals",				displayLogicLevelsInEngineSniffer
+		field = "Do not print messages in case of sync error",  silentTriggerError
+		field = "Focus on inputs in engine sniffer",	engineSnifferFocusOnInputs
+
 	dialog = trigger_advanced,	"Advanced Trigger"
 		field = "Require cam/VVT sync for ignition",	isPhaseSyncRequiredForIgnition
 		field = "Cam sync crank revolution",      camSyncOnSecondCrankRevolution
 		field = "Maximum cam/VVT sync RPM",				maxCamPhaseResolveRpm
 		field = "MAP readout angle",					mapCamDetectionAnglePosition, 1, { vvtMode1 == @@vvt_mode_e_VVT_MAP_V_TWIN@@ }
 		field = "MAP delta threshold",        mapSyncThreshold, 1, { vvtMode1 == @@vvt_mode_e_VVT_MAP_V_TWIN@@ }
-		field = "Print verbose VVT sync details to console",verboseVVTDecoding
-		field = "Print verbose trigger sync to console",	verboseTriggerSynchDetails
-		field = "Display logic signals",				displayLogicLevelsInEngineSniffer
-		field = "Do not print messages in case of sync error",  silentTriggerError
-		field = "Focus on inputs in engine sniffer",	engineSnifferFocusOnInputs
 		field = "Enable noise filtering",				useNoiselessTriggerDecoder, {trigger_type == @@trigger_type_e_TT_TOOTHED_WHEEL_60_2@@ || trigger_type == @@trigger_type_e_TT_TOOTHED_WHEEL_36_1@@}
-		panel = triggerInputComparator @@if_ts_show_trigger_comparator
+		panel = trigger_console
 
 	dialog = triggerConfiguration, "", xAxis
 		panel = trigger_primary, {1}, { consumeObdSensors == 0 }@@if_ts_show_primary_trigger
