Hellen: 8chan-A: align WBO pin description with others

--- a/firmware/config/boards/hellen/alphax-8chan-revA/connectors/8chan-A-B.yaml
+++ b/firmware/config/boards/hellen/alphax-8chan-revA/connectors/8chan-A-B.yaml
@@ -250,19 +250,29 @@ pins:
     type: 12v
 
   - pin: 3B
-    function: WBO1 cal R green 5
+    function: WBO1 Rtrim (pin 5)
+    type: wbo
+    color: green
 
   - pin: 4B
-    function: WBO1 IP red 1
+    function: WBO1 Ip (pin 1)
+    type: wbo
+    color: red
 
   - pin: 5B
-    function: WBO1 VM yellow 2
+    function: WBO1 Vm (pin 2)
+    type: wbo
+    color: yellow
 
   - pin: 6B
-    function: WBO1 VS black 6
+    function: WBO1 Un (pin 6)
+    type: wbo
+    color: black
 
   - pin: 7B
-    function: WBO1 heater white 3
+    function: WBO1 Heater Negative (pin 3)
+    color: white
+    type: wbo
 
   - pin: 8B
     # H144_OUT_IO10
@@ -274,19 +284,29 @@ pins:
     color: purple
 
   - pin: 9B
-    function: WBO2 cal R green 5
+    function: WBO2 Rtrim (pin 5)
+    type: wbo
+    color: green
 
   - pin: 10B
-    function: WBO2 IP red 1
+    function: WBO2 Ip (pin 1)
+    type: wbo
+    color: red
 
   - pin: 11B
-    function: WBO2 VM yellow 2
+    function: WBO2 Vm (pin 2)
+    type: wbo
+    color: yellow
 
   - pin: 12B
-    function: WBO2 VS black 6
+    function: WBO2 Un (pin 6)
+    type: wbo
+    color: black
 
   - pin: 13B
-    function: WBO2 heater white 3
+    function: WBO2 Heater Negative (pin 3)
+    color: white
+    type: wbo
 
   - pin: 14B
     # H144_IN_SENS1
