--- a/firmware/config/boards/hellen/alphax-gold/connectors/34pins-3k-A.yaml
+++ b/firmware/config/boards/hellen/alphax-gold/connectors/34pins-3k-A.yaml
@@ -224,7 +224,7 @@ pins:
     color: red
 
   - pin: 32A
-    function: WBO2 Rtrim (pin 5)
+    function: WBO2 CalR (pin 5)
     type: wbo
     color: green
 
