--- a/firmware/config/boards/hellen/alphax-silver-revA/connectors/alphax-silver.yaml
+++ b/firmware/config/boards/hellen/alphax-silver-revA/connectors/alphax-silver.yaml
@@ -216,7 +216,7 @@ pins:
     color: red
 
   - pin: 32A
-    function: WBO Rtrim (pin 5)
+    function: WBO CalR (pin 5)
     type: wbo
     color: green
 
