--- a/firmware/config/boards/hellen/uaefi/connectors/E.yaml
+++ b/firmware/config/boards/hellen/uaefi/connectors/E.yaml
@@ -22,7 +22,7 @@ pins:
     color: red
 
   - pin: E2
-    function: WBO Rtrim (pin 5)
+    function: WBO CalR (pin 5)
     type: wbo
     color: green
 
